--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
