--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
